@@ -1,3 +1,14 @@
+2002-08-14  Jayaraj Rajappan <jayaraj.rajappan@wipro.com>
+
+	* src/display.c (meta_display_set_grab_op_cursor):
+        In XGrabPointer, set the confine_to argument to the root window
+        of the screen the window is on.
+
+	* src/display.h: add screen argument.
+
+	* src/window.c (meta_window_update_resize_grab_op):
+        pass screen argument as NULL.
+
 2002-08-14  James M. Cape  <jcape@ignore-your.tv>
 
 	* src/themes/Esco/metacity-theme-1.xml: use button positioning
